# sc2sa

./: .gitignore  README.md  pyproject.toml
sc2sa/: __main__.py
